--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "mongoose": "^3.8.20",
     "mongoose-random": "^0.1.1",
     "time-grunt": "^1.0.0"
+  },
+    "devDependencies": {
+    "nodemon": "^1.11.0"
+  },
+  "engines": {
+    "node": "6.9.1"
   }
 }
